[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
root = "../../.."

[project]
name = "nat_email_phishing_analyzer"
dynamic = ["version"]
dependencies = [
  "nvidia-nat[langchain]~=1.2",
  "arize-phoenix==6.1.*",
  "bs4==0.0.2",
  "networkx~=3.4",
  "openinference-instrumentation-langchain==0.1.29",
]
requires-python = ">=3.11,<3.13"
description = "Simple Phishing Email Analyzer NeMo Agent toolkit example"
keywords = ["ai", "rag", "agents"]
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
nvidia-nat = { path = "../../..", editable = true }

[project.entry-points.'nat.components']
nat_email_phishing_analyzer = "nat_email_phishing_analyzer.register"
