[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
root = "../../.."

[project]
name = "nat_simple_web_query_eval"
dynamic = ["version"]
dependencies = ["nvidia-nat[langchain, profiling]~=1.2", "nat_simple_web_query"]
requires-python = ">=3.11,<3.13"
description = "Simple LangSmith-Documentation Agent Evaluation and Profiling - demonstrates NeMo Agent toolkit evaluation capabilities"
keywords = ["ai", "evaluation", "profiling", "agents"]
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
nvidia-nat = { path = "../../..", editable = true }
nat_simple_web_query = { path = "../../getting_started/simple_web_query", editable = true }
