[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
root = "../../.."

[project]
name = "nat_swe_bench"
dynamic = ["version"]
dependencies = [
    "nvidia-nat[langchain]~=1.2",
    "swebench==3.0.3",
]

requires-python = ">=3.11,<3.13"
description = "Example for solving SWE bench problems"
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
nvidia-nat = { path = "../../..", editable = true }

[project.entry-points.'nat.components']
nat_swe_bench = "nat_swe_bench.register"
