[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
root = "../../.."

[project]
name = "nat_agno_personal_finance"
dynamic = ["version"]
dependencies = ["nvidia-nat[agno]~=1.2", "openai~=1.66", "litellm~=1.63.14"]
requires-python = ">=3.11,<3.13"
description = "Custom NeMo Agent toolkit Workflow using Agno for personal finance"
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
nvidia-nat = { path = "../../..", editable = true }

[project.entry-points.'nat.components']
nat_agno_personal_finance = "nat_agno_personal_finance.register"
