[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
root = "../../.."

[project]
name = "nat_simple_web_query"
dynamic = ["version"]
dependencies = [
  "nvidia-nat[langchain]~=1.2",
  "nvidia-nat[telemetry]~=1.2",
  "faiss-cpu==1.9.0",
]
requires-python = ">=3.11,<3.13"
description = "Simple NeMo Agent toolkit example"
keywords = ["ai", "rag", "agents"]
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
nvidia-nat = { path = "../../..", editable = true }

[project.entry-points.'nat.components']
nat_simple_web_query = "nat_simple_web_query.register"
