[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
root = "../../.."

[project]
name = "nat_user_report"
dynamic = ["version"]
dependencies = ["nvidia-nat[s3]", "nvidia-nat[mysql]"]
requires-python = ">=3.11,<3.13"
description = "NeMo Agent toolkit example that uses an Object Store"
keywords = ["ai", "rag", "agents"]
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
nvidia-nat = { path = "../../..", editable = true }

[project.entry-points.'nat.components']
nat_user_report = "nat_user_report.register"
