[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools]
packages = []

[tool.setuptools_scm]
root = "../../.."

[project]
name = "nat_simple_calculator_observability"
dynamic = ["version"]
dependencies = ["nvidia-nat[langchain,telemetry]~=1.2", "nat_simple_calculator"]
requires-python = ">=3.11,<3.13"
description = "Simple Calculator Observability - demonstrates NeMo Agent toolkit observability and tracing capabilities"
keywords = ["ai", "observability", "tracing", "agents"]
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
nvidia-nat = { path = "../../..", editable = true }
nat_simple_calculator = { path = "../../getting_started/simple_calculator", editable = true }
